[package]
name = "echo-server"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]

[dependencies]
tokio = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
futures = "0.1"
byteorder = "^1.2"
bytes = "0.4"
log = "0.4"
env_logger = "0.5"

[[bin]]
name = "echo-server"
path = "src/main.rs"

[[bin]]
name = "echo-client"
path = "src/client.rs"